#
#   $Id$
#
#   This is a log of major user-visible changes in each release
#

(unreleased):

    - Fix copy and move commands (eridius r25024).

    - Passing multiple arguments to $option-delete now works as expected
      (ticket #11929, eridius r25006).

    - fs-traverse no longer follows symlinks specified on the root. This fixes
      the incorrect behaviour of delete seen in #11862 (eridius r25003).

    - Remove bundled xar. (jberry r24913).
    
    - Tighten checking of port name in depspecs. neither + nor / is allowed.
      (jberry r24929, r24934, r24940).

Release 1.4.40 (7-May-2007, tagged at r24909 by jberry):

    - Note the bump in version naming. To leave ourselves lots of room in our versioning
      scheme, we've jumped from 1.4.3 to 1.4.40. The floating point represenation as
      reported by port version (1.440) will still be the same; we're just interpreting
      it differently.

    - variable tracing now works in a much better way and handles unsets properly.
      Similarly, ${option}-delete now works better. Depends validation no longer
      attempts to validate when the variable is unset. Additionally, the validation
      now actually validates each depspec instead of simply finding a single spec
      within the list that works (ticket #11868, eridius r24678).

    - macports infrastructure now easier to use from scripts.
      ui_prefix and ui_channels have default implementations, and
      all arguments to dportinit are now optional (ticket #11837, eridius r24460).

    - ln now accepts combined flags (ex. ln -sf foo bar) (eridius r24452)

    - default_variants now handles multiple values correctly (ticket #11828, eridius r24450).

    - ln uses new symlink command so it can create symlinks that point to
      files that don't actually exist (eridius r24444).

    - New bare-bones Pextlib command `symlink source target` (ticket #11840, eridius r24444).

    - delete reimplemented using fs-traverse (eridius r24435).
